<resources>
    <string name="app_name">My Lab Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="app_graphicsbubbleprogram">Graphics Bubble Program</string>
    <string name="app_graphicsbubblexml">Graphics Bubble Xml</string>
    <string name="app_graphicscanvasbubble">Graphics Canvas Bubble</string>
    <string name="app_graphicscanvasbubblesv">Graphics Canvas Surface View</string>
    <string name="app_graphicsframeanimation">Graphics Frame Animation</string>
    <string name="app_graphicspaint">Graphics Paint Activity</string>
    <string name="app_graphicshapedraw">Graphics Shape Draw</string>
    <string name="app_graphicshapedrawxml">Graphics Shape Draw Xml</string>
    <string name="app_graphictransitiondrawable">Graphics Transition Drawable</string>
    <string name="app_graphicstweenanimation">Graphics Tween Animation</string>
    <string name="app_graphicsvalueanimator">Graphics Value Animator</string>
    <string name="app_graphicsviewpropertyanimator">Graphics View Property Animator</string>
    <string name="app_audiovideoaudiomanager">Audio Video Audio Manager</string>
    <string name="app_audiovideoaudiorecording">Audio Video Audio Recording</string>
    <string name="app_audiovideocameraactivity">Audio Video Camera</string>
    <string name="app_ringtonemanager">Ringtone Manager</string>
    <string name="app_videoplay">Video Play</string>
    <string name="app_musicservice">Music Service</string>
    <string name="app_indicatetouchlocation">Indicate Touch Location</string>
    <string name="app_gestures">Gestures</string>
    <string name="app_viewflippertest">View Flipper Test</string>

    <string name="btn_txt_1">Graphics Bubble Program</string>
    <string name="btn_txt_2">Graphics Bubble Xml</string>
    <string name="btn_txt_3">Graphics Canvas Bubble</string>
    <string name="btn_txt_4">Graphics Canvas Bubble Surface View</string>
    <string name="btn_txt_5">Graphics Frame Animation</string>

    <string name="btn_txt_6">Graphics Paint</string>
    <string name="btn_txt_7">Graphics Shape Draw</string>
    <string name="btn_txt_8">Graphics Shape Draw Xml</string>
    <string name="btn_txt_9">Graphics Transition Drawable</string>
    <string name="btn_txt_10">Graphics Tween Animation</string>

    <string name="btn_txt_11">Graphics Value Animator</string>
    <string name="btn_txt_12">Graphics View Property Animator</string>
    <string name="btn_txt_13">Audio Video Audio Manager</string>
    <string name="btn_txt_14">Audio Video Audio Recording</string>
    <string name="btn_txt_15">Audio Video Camera</string>

    <string name="btn_txt_16">Ringtone Manager</string>
    <string name="btn_txt_17">Video Play</string>
    <string name="btn_txt_18">Music Service</string>
    <string name="btn_txt_19">Indicate Touch Location</string>
    <string name="btn_txt_20">Gestures</string>

    <string name="btn_txt_21">View Flipper Test</string>

    <string name="bubble_desc">Bubble</string>
    <string name="animation_desc">animation</string>

    <string name="text_literal">Text</string>
    <string name="long_text">This is a lot of Text. This is even more Text.</string>

    <string name="cyan_circle">Cyan Circle</string>
    <string name="magenta_circle">Magenta Circle</string>
    <string name="fading_image_desc">Fading Image</string>

    <string name="button_label">Animate</string>

    <string name="up_string">Up</string>
    <string name="down_string">Down</string>
    <string name="play_string">Play</string>

    <string name="stop_recording_string">Stop Recording</string>
    <string name="start_recording_string">Start Recording</string>

    <string name="start_playback_string">Start Playback</string>
    <string name="stop_playback_string">Stop Playback</string>

    <string name="ringtone_string">Ringtone</string>
    <string name="notification_string">Notification</string>
    <string name="alarm_string">Alarm</string>

    <string name="stop_service_string">Stop Service</string>
    <string name="start_service_string">Start Service</string>

</resources>
